Replace Java 11 string helpers in onboarding flow